*Empty MediaWiki Message*

--- a/შარტრის_საკათედრო_ტაძარი.mw
+++ b/შარტრის_საკათედრო_ტაძარი.mw
@@ -4,7 +4,7 @@
 [[სურათი:Labyrinth_at_Chartres_Cathedral.jpg|thumb|right|300px|ლაბირინთის ფრაგმენტი]]  
 '''შარტრის ღვთისმშობლის საკათედრო ტაძარი''' ([[ფრანგული ენა|''ფრანგ.'']] Cathédrale Notre-Dame de Chartres) მდებარეობს [[შარტრი|შარტრში]], [[პარიზი|პარიზიდან]] 80 კმ-ში და წარმოადგენს მაღალი [[გოთიკა|გოთური]] სტილის არქიტექტურის საუკეთესო ნიმუშს მთელ [[საფრანგეთი|საფრანგეთში]].
 
-[[რომანესკა|რომანესკული]] სტილის ნაგებობის ფუნდამენტზე ახალი შენობის აღმართვა [[1145]] წელს დაიწყო, თუმცა [[1194]] წლის ხანძარს მხოლოდ ტაძრის დასავლეთის ფასადი გადაურჩა და ეს ნაწილი ადრეულ გოთურ სტილშია. კათედრალის ძირითადი კარკასი აღდგენილ იქნა 1194-1220 წლებში, რაც საკმაოდ მცირე დროა შუასაუკუნეების ტაძრების მშენებლობისთვის.
+[[რომანული სტილი|რომანული სტილის]] ნაგებობის ფუნდამენტზე ახალი შენობის აღმართვა [[1145]] წელს დაიწყო, თუმცა [[1194]] წლის ხანძარს მხოლოდ ტაძრის დასავლეთის ფასადი გადაურჩა და ეს ნაწილი ადრეულ გოთურ სტილშია. კათედრალის ძირითადი კარკასი აღდგენილ იქნა 1194-1220 წლებში, რაც საკმაოდ მცირე დროა შუასაუკუნეების ტაძრების მშენებლობისთვის.
 
 შარტრის კათედრალის სილამაზე მრავალი შემოქმედის აღმაფრენის წყარო ყოფილა, არქიტექტურის ისტორიკოსები ხოტბას ასხამდნენ მის დახვეწილ წახნაგებსა და ცადატყორცნილ ჰაეროვან ქიმებს. ძველ ისტორიკოსთა ამგვარ შეფასებას დღესაც სავსებით იზიარებენ, ვინაიდან შარტრის ტაძარი ჭეშმარიტად შეუდარებელია ყველა ფრანგულ გოთურ კათედრალთა შორის. შორიდან იქმნება ილუზია, რომ ის ხორბლის ველებზე ჰაერშია გამოკიდული და მხოლოდ მასთან მიახლოებისას ამჩნევს მნახველი გარშემო არსებულ ქალაქს, რომელიც ტაძრის გორაკის ფერდობებზეა შეფენილი. მისი ორი კონტრასტული ქიმი - ერთი 105 მ. მარტივი პირამიდის ფორმის, 1140 წელსაა აგებული, მეორე კი - 113 მეტრი სიმაღლის, ადრეული მე-16 საუკუნის ფლამბოიანტური ორნამენტებით დამშვენებული გუმბათია დაშენებული შედარებით ადრინდელ კოშკზე -- აჭიმულია რუხ მომწვანო სახურავზე; მათ გარშემო კომპლექსური არკ-ბუტანტებია (ე.წ. მფრინავი საყრდენები) შემოვლებული.
 
