*Empty MediaWiki Message*

--- a/როკფელერის_ცენტრი.mw
+++ b/როკფელერის_ცენტრი.mw
@@ -22,6 +22,7 @@
 [[en:Rockefeller Center]]
 [[es:Rockefeller Center]]
 [[fr:Rockefeller Center]]
+[[ja:ロックフェラーセンター]]
 [[no:Rockefeller Center]]
 [[pt:Rockefeller Center]]
 [[fi:Rockefeller Center]]
