--- a/ჩილე.mw
+++ b/ჩილე.mw
@@ -43,10 +43,9 @@
 ==სახელმწიფო==
  
 * '''სახელმწიფო სისტემა''' : რესპუბლიკა. 
-* '''სახელმწიფოს მეთაური''' : პრეზიდენტი Ricardo LAGOS Escobar (2000. 
+* '''სახელმწიფოს მეთაური''' : პრეზიდენტი Michelle BACHELET Jeria (2006-) 
 * '''საკანონმდებლო ორგანო''' : ორპალატიანი პარლამენტი (49+120 წევრი). 
 * '''ადმინისტრაციული დაყოფა''' : 13 რეგიონი (región).
-
 
 ==დემოგრაფია==
  
