*Empty MediaWiki Message*

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -91,7 +91,7 @@
 
 უკანასკნელი ორი საუკუნის განმავლობაში ებრაელები რამოდენიმე მიმდინარეობად დაიყვნენ. თითოეულ მათგანს სხვანაირად ესმის, თუ რა უნდა იყოს ებრაელისათვის აუცილებლად მისაღები რწმენის პრინციპები და როგორ უნდა იცხოვროს ადამიანმა ებრაელად. გარკვეულწილად, ამ დოქტრინულმა განსხვავებებმა განხეთქილება ჩამოაგდეს მათ შორის. მიუხედავად ამისა, გარკვეულ დონემდე ებრაული ერთობა შენარჩუნდა; კონსერვატორი ებრაელისათვის, მაგალითად, არ იქნება უჩვეულო მართლმადიდებლურ, ან რეფორმისტულ სინაგოგაში ილოცოს.
 
-*[[მართლმადიდებლური იუდაიზმი]] იმ აზრზე დგას, რომ თორა ღმერთმა შეადგინა, შემდეგ კი მოსეს უკარნახა, და ამიტომ თორის   კანონები დამავალებელი და უცვლელია. მართლმადიდებელ ებრაელებს [[შულხან არუხი]] ებრაული კანონის საბოლოო კოდიფიკაციად მიაჩნიათ. ისინი აგრეთვე ამტკიცებენ, რომ ჩვენი დროის მართლმადიდებლური იუდაიზმი განათლების მოძრაობამდე არსებული იუდაიზმიდან უშუალოდ გამომდინარეობს. მართლმადიდებელ ებრაელთა უმრავლესობა ებრაული თეოლოგიის ერთ-ერთ ფორმას აღიარებს, რომელიც მოშე ბენ მაიმონის ''რწმენის ცამეტ პრინციპს'' ეყრდნობა. მართლმადიდებლურ ებრაელობას არაფორმალურად ორი სტილის მორწმუნეები შეადგენენ; მათ შორის არსებული განსხვავებები მიზეზია ორი მიდგომისა, რომელსაც [[თანამედროვე მართლმადიდებლური იუდაიზმი]] და [[ხარედული იუდაიზმი]] ანსახიერებენ ცალ-ცალკე. ფილოსოფიურად, ეს ორი ჯგუფი თანამედროვეობასთან შეგუების და აზროვნების არა-ებრაულ დისციპლინათა მნიშვნელოვანების საკითხებშია შეუთანხმებელი. პრაქტიკულ სფეროში, ამ ორი ჯგუფის ებრაელები ჩაცმის სტილით და რელიგიური წესებისათვის თავგამოდების დონით განსხვავდებიან ერთმანეთისგან. 
+1) [[მართლმადიდებლური იუდაიზმი]] იმ აზრზე დგას, რომ თორა ღმერთმა შეადგინა, შემდეგ კი მოსეს უკარნახა, და ამიტომ თორის   კანონები დამავალებელი და უცვლელია. მართლმადიდებელ ებრაელებს [[შულხან არუხი]] ებრაული კანონის საბოლოო კოდიფიკაციად მიაჩნიათ. ისინი აგრეთვე ამტკიცებენ, რომ ჩვენი დროის მართლმადიდებლური იუდაიზმი განათლების მოძრაობამდე არსებული იუდაიზმიდან უშუალოდ გამომდინარეობს. მართლმადიდებელ ებრაელთა უმრავლესობა ებრაული თეოლოგიის ერთ-ერთ ფორმას აღიარებს, რომელიც მოშე ბენ მაიმონის ''რწმენის ცამეტ პრინციპს'' ეყრდნობა. მართლმადიდებლურ ებრაელობას არაფორმალურად ორი სტილის მორწმუნეები შეადგენენ; მათ შორის არსებული განსხვავებები მიზეზია ორი მიდგომისა, რომელსაც [[თანამედროვე მართლმადიდებლური იუდაიზმი]] და [[ხარედული იუდაიზმი]] ანსახიერებენ ცალ-ცალკე. ფილოსოფიურად, ეს ორი ჯგუფი თანამედროვეობასთან შეგუების და აზროვნების არა-ებრაულ დისციპლინათა მნიშვნელოვანების საკითხებშია შეუთანხმებელი. პრაქტიკულ სფეროში, ამ ორი ჯგუფის ებრაელები ჩაცმის სტილით და რელიგიური წესებისათვის თავგამოდების დონით განსხვავდებიან ერთმანეთისგან. 
 
 *[[თანამედროვე მართლმადიდებლური იუდაიზმი]] ტრადიციული ებრაელობის ფართოდ გავრცელებული ფორმაა. იგი პატივს სცემს ისტორიულ ტრადიციებსა და წესებს, ტრადიციულად სწამს ღმერთი და ეწევა ღვთისმსახურებას, მაგრამ ამასთანავე აფასებს განათლებას და მეცნიერებას.
   
@@ -99,7 +99,7 @@
    
 *[[ხასიდური იუდაიზმი]] ხარედული იუდაიზმის ერთ-ერთი ჯგუფია. 
 
-*[[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციული) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.   
+2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციული) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომლებიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.   
         
  
          
