*Empty MediaWiki Message*

--- a/ივერი_ფრანგიშვილი.mw
+++ b/ივერი_ფრანგიშვილი.mw
@@ -1,3 +1,4 @@
+[[სურათი:Prang.jpg|thumb|ივერი ფრანგიშვილი]]
 '''ივერი ვარლამის ძე ფრანგიშვილი''' (* [[6 ივნისი]], [[1930]], [[დიდი ჯიხაიში|სოფ.დიდი ჯიხაიში]], [[სამტრედიის რაიონი]] ―   †  [[28 თებერვალი]], [[2006]], [[მოსკოვი]]), [[ქართველები|ქართველი]] მეცნიერი გამოთვლითი ტექნიკისა და ავტომატური მართვის დარგში, საქართველოს მეცნიერებათა აკადემიის აკადემიკოსი (1979), საქართველოს მეცნიერებათა აკადემიის ვიცე-პრეზიდენტი (1985), რსფსრ მეცნიერებათა მოღვაწე (1981), ტექნიკური მეცნიერებათა დოქტორი (1968), პროფესორი (1969). სკკპ-ის წევრი 1964 წლიდან. 
 
 1952 წელს დაამთავრა თბილისის პილიტექნიკური ინსტიტუტია ენერგეტიკის ფაკულტეტი. 1952-1960 წლებში მუშაობდა საქართველოს სხვადასხვა სამრეწველო და სამეცნიერო დაწესებულებებში. 1960 წლიდან მოღვაწეობდა მოსკოვში ყოფილი სსრკ მეცნიერებათა აკადემიის ავტომატური და ტელემექანიკის (ამჟამად მართვის პრობლემების) ინსტიტუტში, 1970 წლიდან ამავე ინსტიტუტის დირექტორის მოადგილე სამეცნიერო დარგში. ატომური ელექტროსადგურების ავტომატიზებული მართვის სისტემების გენერალური კონსტრუქტორი (1985).
