--- a/დავით_VI_ნარინი.mw
+++ b/დავით_VI_ნარინი.mw
@@ -1,4 +1,4 @@
-[[image:Davit-narini-1.jpg|thumb|right|300px|'''დავით VI ''ნარინი''''' მეფობაში და ბერობაში   <small>([[გელათი|გელათის]] მონასტერი. დავით ნარინის ეკვდერი)</small> 
+[[image:Davit-narini-1.jpg|thumb|right|300px|'''დავით VI ''ნარინი''''' მეფობაში და ბერობაში   <small>([[გელათის მონასტერი]]. დავით ნარინის ეკვდერი)</small> 
 ]]
 '''დავით VI''' ''ნარინი'' (დაახლოებით * [[1225]] ― † [[1293]]), საქართველოს მეფე [[1245]]([[1247]])-93, [[რუსუდანი|რუსუდან]] მეფის ძე. დაახლოებით [[1230]], როცა აღმოსავლეთ საქართველო ხვარაზმელთ ეპყრათ ხელთ და სამეფო კარი [[ქუთაისი|ქუთაისში]] იყო გახიზნული, მცირეწლოვანი დავითი დედამ თანამოსაყდრედ დასვა. მონღოლებთან რუსუდანის შეთანხმების შემდეგ, დაახლოებით [[1242]]-43, დედა-შვილი [[თბილისი|თბილისში]] დაბრუნდა. იმავე წლებში მონღოლთა ადგილობრივმა ხელისუფლებამ ტახტის მემკვიდრე, ქართველი დიდებულ ფეოდალთა ერთი ჯგუფის თანხლებით, [[ოქროს ურდო|ოქროს ურდოში]] [[ბათო-ყაენი|ბათო-ყაენთან]] გაგზავნა მეფედ დასამტკიცებლად. 
 აქედან ქართველები დიდ ყაენთან გაგზავნეს [[ყარაყორუმი|ყარაყორუმში]]. ტახტის მემკვიდრე მონღოლეთში რამდენიმე წელიწადს ჩარჩა. საქართველოში მის შესახებ არაფერი იცოდნენ. [[1246]] ყარაყორუმში ჩავიდა ტახტის ახალი მემკვიდრე [[დავით VII|დავით]] გიორგის ძე. [[გუიუქ-ყაენი|ყაენმა გუიუქმა]] საცილობელი საკითხი მონღოლური სამართლის მიხედვით გადაწყვიტა: დავით გიორგის ძე, როგორც უფროსი, უფროს ([[მონღოლური ენა|მონღოლურად]] "''ულუ''") მეფედ, ხოლო დავით რუსუდანის ძე უმცროს (მონღოლურად "''ნარინი''") მეფედ დაამტკიცა. [[1248]] ([[1249]]) დავით VI და დავით VII თბილისში ჩამოვიდნენ. [[1259]]-მდე ორივე მეფე თანხმობით განაგებდა სამეფოს. [[1256]]-იდან საქართველო ილპანთა სახელმწიფოს შემადგენლობაში მოექცა. [[მონღოლთა ბატონობა საქართველოში|მონღოლთა ბატონობის]] სიმძიმით შექმნილი აუტანელი გაჭირვების გამო [[1259]] დაიწყო აჯანყება დავით VI-ის მეთაურობით. ყაენმა ჰულაგუმ დავით VI-ის წინააღმდეგ დიდძალი ჯარი გაგზავნა არღუნ-ნოინის სარდლობით. დავით VI-მ ბრძოლის გაგრძელება შეუძლებლად ცნო, ლაშქარი დაშალა, თვითონ დასავლეთ საქართველოში გადავიდა და ქუთაისში გამაგრდა. არღუნმა დასავლეთ საქართველოში გადასვლა ვერ გაბედა, მაგრამ ახლა აჯანყებული დავით VII ულუს წიმააღმდეგ მოუხდა ბრძოლა ([[1260]]). ეს უკანასკნელი [[1261]] იძულებული გახდა დავით VI-თან გადასულიყო. [[1262]], როცა დავით VII მონღოლებს შეუთანხმდა და აღმოსავლეთ საქართველოში გადავიდა, დავით VI ფაქტობრივად დასავლეთ საქართველოს (იმერეთის) მეფედ დარჩა. დასავლეთ საქართველოზე მონღოლების ბატონობა არ ვრცელდება და დავით VI დამოუკიდებლად განაგებდა ქვეყანას. მისი საგარეო პოლიტიკა იქით იყო მიმართული, რომ განემტკიცებინა კავშირი ილხანების მტერ-მეტოქე ქვეყნებთან და აღედგინა და შეენარჩუნებინა საქართველოს პოლიტიკური გავლენას ტრაპიზონის სამეფოში. ამ მიზნით ჯერ [[1264]]-65, ხოლო შემდეგ [[1268]] დავით VI-მ ელჩები გაგზავნა [[ეგვიპტე|ეგვიპტის]] სულთანთან. მეორე მხრით, დავით VI-ს მეგობრული ურთიერთობა ჰქონდა ოქროს ურდოსთან. ამასთან დავით VI ცდილობდა [[ილხანთა სამეფო|ილხანთა სამეფოში]] ატეხილი შინაომები თავის სასარგებლოდ გამოეცენებინა. [[1269]] ([[1270]]) დავით VI-მ შეიხიზნა მონღოლი ბატონიშვილი თეგუდარი (ნიკუდარი), რომელიც [[ბარახა-ყაენი|ბარახა-ყაენთან]] (მავერა-ნაჰრის, შვიდმდინარეთისა და აღმოსავლეთ თურქესტანის ყაენი [[1266]]-71) ერთად [[აბაღა-ყაენი|აბაღა-ყაენის]] (ილხანი [[1263]]-82) წინააღმდეგ იბრძოდა. მაგრამ როცა თეგუდარის ლაშქარმა ყაჩაღურ ძარცვა-რბევას მიჰყო ხელი, იგივე დავით VI წინ აღუდგა მას აბაღას სარდალ სირმონთან ერთად. 70-იან წლებში დავით VI-ს გადაუდგა [[რაჭა|რაჭის]] ერისთავი [[კახაბერისძე კახაბერ|კახაბერ კახაბერისძე]], რომელიც აბაღას ეახლა და დავით VI-ის წინააღმდეგ ბრძოლაში თავისი სამსახური შესთავაზა. აბაღას სარდლები ორჯერ შეიჭრნენ იმერეთში, მაგრამ დავით VI ხელში ვერ ჩაიგდეს.
