*Empty MediaWiki Message*

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -95,7 +95,7 @@
 
 *[[თანამედროვე მართლმადიდებლური იუდაიზმი]] ტრადიციული ებრაელობის ფართოდ გავრცელებული ფორმაა. იგი პატივს სცემს ისტორიულ ტრადიციებსა და წესებს, ტრადიციულად სწამს ღმერთი და ეწევა ღვთისმსახურებას, მაგრამ ამასთანავე აფასებს განათლებას და მეცნიერებას.
   
-*[[ხარედული იუდაიზმი]] ძლიერ კონსერვატიული ფორმაა იუდაიზმისა. მას ზოგჯერ ულტრა-ორთოდოქსალურს უწოდებენ, ოღონდ ეს ტერმინი გამკენწლავად ითვლება. მიუხედავად იმისა, რომ ხარედული იუდაიზმის რამოდენიმე ჯგუფი (როგორც ლუბავიჩური ხასიდებისა) თანამედროვე მართლმადიდებლებისავით ეთვისება მოდერნიზაციას, ხარედების უმრავლესობა თანამედროვე მატერიალურ კულტურას მხოლოდ ღმერთისათვის უკეთესი სამსახურის გაწევის საშუალებად თვლის, ხოლო თანამვდროვე სულიერ კულტურას არავითარ ანგარიშს არ უწევს.
+*[[ხარედული იუდაიზმი]] ძლიერ კონსერვატიული ფორმაა იუდაიზმისა. მას ზოგჯერ ულტრა-ორთოდოქსალურს უწოდებენ, ოღონდ ეს ტერმინი გამკენწლავად ითვლება. მიუხედავად იმისა, რომ ხარედული იუდაიზმის რამოდენიმე ჯგუფი (როგორც ლუბავიჩური ხასიდებისა) თანამედროვე მართლმადიდებლებისავით ეთვისება მოდერნიზაციას, ხარედების უმრავლესობა თანამედროვე მატერიალურ კულტურას მხოლოდ ღმერთისათვის უკეთესი სამსახურის გაწევის საშუალებად თვლის, ხოლო თანამედროვე სულიერ კულტურას არავითარ ანგარიშს არ უწევს.
    
 *[[ხასიდური იუდაიზმი]] ხარედული იუდაიზმის ერთ-ერთი მნიშვნელოვანი  ჯგუფია. 
 
