*Empty MediaWiki Message*

--- a/ზაქარია_II_მხარგრძელი.mw
+++ b/ზაქარია_II_მხარგრძელი.mw
@@ -8,7 +8,7 @@
 კონფესიურად ზაქარია იყო ერთადერთი [[მონოფიზიტობა|მონოფიზიტი]]  მხარგრძელი ამ პერიოდში. მისი მოძღვარი იყო ცნობილი სომეხი საეკლესიო მოღვაწე და კანონმდებელი [[მხითარ გოში]]. XIII საუკუნის სომეხი ისტორიკოსების [[კირაკოს განძაკეცი|კირაკოს განძაკეცისა]] და [[ვარდან ბარძბერდეცი|ვარდან აღმოსავლელის]] ცნობით, ზაქარია ცდილობდა ზოგიერთი ცვლილების შეტანას სომხურ სარწმუნოებაში, რათა დაეახლოვებინა ის ქართულ სარწმუნოებასთან. ამ მიზნით  მხარგრძელის ინიციატივით მოწვეულ იქნა ლორისა ([[1205]]) და ანისის ([[1207]]) [[საეკლესიო კრებები]].
 
 
-ზაქარიას გარდაცვალების შემდეგ   [[მხარგრძელები|მხარგრძელთა]] ძირითადი შტო გაიყო 2 ნაწილად: ზაქარიასა და ივანეს (ზაქარიას ძმა) სახლებად.  მხარგრძელმა მნიშვნელოვანი წვლილი შეიტანა საქართველოს ფეოდალური მონარქიის განმტკიცებაში, თურქების მიერ დაპყრობილი ამიერკავკასიის მიწების განთავისუფლებასა და საქართველოსთან შეერთებაში. ამიტომაც იმდროინდელი ქართული წყაროები (რომელიც ასახავენ ქართულ ფეოდალური არისტოკრატიის თვალსაზრისს) ქებით იხსენიებენ  მხარგრძელს და მაღალ შეფასებას აძლევენ მის თავდადებას ქართული სახელმწიფოს ინტერესებისათვის, ერთგულებას მეფისადმი, მის პიროვნულ ღირსებებს. ვარდანის ცნობით,  მხარგრძელი გარდაიცვალა ირანის ლაშქრობიდან დაბრუნების შემდეგ. დაკრძალეს  [[სანაინი|სანაინში]], თავის საგვარეულო მონასტერში.
+ზაქარიას გარდაცვალების შემდეგ   [[მხარგრძელები|მხარგრძელთა]] ძირითადი შტო გაიყო 2 ნაწილად: ზაქარიასა და [[მხარგრძელი, ივანე I|ივანეს]] (ზაქარიას ძმა) სახლებად.  მხარგრძელმა მნიშვნელოვანი წვლილი შეიტანა საქართველოს ფეოდალური მონარქიის განმტკიცებაში, თურქების მიერ დაპყრობილი ამიერკავკასიის მიწების განთავისუფლებასა და საქართველოსთან შეერთებაში. ამიტომაც იმდროინდელი ქართული წყაროები (რომელიც ასახავენ ქართულ ფეოდალური არისტოკრატიის თვალსაზრისს) ქებით იხსენიებენ  მხარგრძელს და მაღალ შეფასებას აძლევენ მის თავდადებას ქართული სახელმწიფოს ინტერესებისათვის, ერთგულებას მეფისადმი, მის პიროვნულ ღირსებებს. ვარდანის ცნობით,  მხარგრძელი გარდაიცვალა ირანის ლაშქრობიდან დაბრუნების შემდეგ. დაკრძალეს  [[სანაინი|სანაინში]], თავის საგვარეულო მონასტერში.
 
 
 
