*Empty MediaWiki Message*

--- a/იალტა.mw
+++ b/იალტა.mw
@@ -3,7 +3,7 @@
 
 იალტის არსებობა პირველად მე-12 საუკუნეში დაფიქსირდა არაბი გეოგრაფის მიერ, რომელმაც იგი ბიზანტიურ პორტად და მეთევზეთა დასახლებად მონათლა. მე-14 საუკუნეში ქალაქი გენუის სავაჭრო კოლონიათა სისტემის ნაწილი ხდება და მოიხსენიება როგორც ეტალიტა ან გალიტა. 1475 წელს იალტა დანარჩენ ყირიმთან ერთად ოსმანთა მიერ იქნა შეპყრობილი, რომლებმაც იგი ნახევრად დამოუკიდებელ ყირიმის სახანოდ აქციეს. 1783 წელს იალტა [[რუსეთის იმპერია|რუსეთის იმპერიამ]] შეიერთა მთელ ყირიმთან ერთად, რაც რუსეთ-თურქეთის ომის საბაბი გახდა 1787-1792 წლებში.
 
-მე-19 საუკუნეში ქალაქი პოპულარული კურორტი, დასასვენებელი ადგილი ხდება რუსეთის არისტოკრატიისა და ჩინოსნებისთვის. მწერლები [[ტოლსტოი, ლევ|ლევ ტოლსტოი]] და [[ჩეხოვი, ანტონ|ანტონ ჩეხოვი]] ზაფხულს აქ ატარებდნენ. ქალაქი ასევე მჭიდროდ ასოცირდება სამეფო კართან. 1889 წელს [[ალექსანდრე III]]-მ იალტის შორიახლოს [[მასანდრას სასახლე]] ააგო, 1911 წელს კი [[ნიკოლოზ II]]-მ [[ლივადიას სასახლე]] ააშენა ქალაქის სამხრეთით.
+მე-19 საუკუნეში ქალაქი პოპულარული კურორტი, დასასვენებელი ადგილი ხდება რუსეთის არისტოკრატიისა და ჩინოსნებისთვის. მწერლები [[ტოლსტოი, ლევ|ლევ ტოლსტოი]] და [[ჩეხოვი, ანტონ|ანტონ ჩეხოვი]] ზაფხულს აქ ატარებდნენ. ქალაქი ასევე მჭიდროდ ასოცირდება სამეფო კართან. 1889 წელს [[ალექსანდრე III (რუსეთი)|ალექსანდრე III-მ]] იალტის შორიახლოს [[მასანდრას სასახლე]] ააგო, 1911 წელს კი [[ნიკოლოზ II (რუსეთი)|ნიკოლოზ II-მ]] [[ლივადიას სასახლე]] ააშენა ქალაქის სამხრეთით.
 
 მე-20 საუკუნეში იალტა საბჭოთა კავშირის უმთავრესი შავიზღვისპირა კურორტი ხდება. 1920 წელს ლენინი ხელს აწერს დეკრეტს "ყირიმის მშრომელი ხალხისთვის სამკურნალო მიზნებით გამოყენების შესახებ", რის შედეგადაც რეგიონი ექსკლუზიური დასასვენებელი ადგილიდან სოციალიზმის მშენებლობით დაღლილ პროლეტართა მასობრივ გამაჯანსაღებელ ცენტრად გადაიქცა. იალტის გარშემო უამრავი სანატორიუმი გაშენდა. იალტაში ისვენებდა საბჭოთა ელიტაც. სტალინი მასანდრას სასახლეს საზაფხულო რეზიდენციად იყენებდა.
 
