*Empty MediaWiki Message*

--- a/არქეოლოგია.mw
+++ b/არქეოლოგია.mw
@@ -11,19 +11,19 @@
 
 
 '''[[პალეოლითი|პალეოლითის ხანა]]'''
-:[[აშელის კულტურა]] – [[შელის კულტურა]] – [[მუსტიერის კულტურა]]
+:[[აშელის კულტურა]] – [[შელის კულტურა]] – [[მუსტიეს კულტურა]]
 
 
 '''[[მეზოლითი|მეზოლითის ხანა]]'''
-:[[ნატუფიის კულტურა]] – [[აზილის კულტურა]]
+:[[ნატუფის კულტურა]] – [[აზილის კულტურა]]
 
 
 '''[[ნეოლითი|ნეოლითის]] და [[ენეოლითი|ენეოლითის]] ხანა'''
-:[[ჰასუნის კულტურა]] – [[ფაიუმის კულტურა]] – [[ელ-ობეიდის კულტურა]] – [[იანშაოს კულტურა]] – [[მაიკოპის კულტურა]]
+:[[ჰასუნის კულტურა]] – [[ფაიუმის კულტურა]] – [[ელ-ობეიდის კულტურა]] – [[იანშაოს კულტურა]] – [[მაიკოპის კულტურა]] – [[ანასეულის კულტურა]]
 
 
 '''[[ბრინჯაოს ხანა]]'''
-:[[კრეტა-მიკენის კულტურა]] – [[ყობანის კულტურა]]
+:[[კრეტა-მიკენის კულტურა]] – [[ყობანის კულტურა]] – [[მტკვარ-არაქსის კულტურა]] -[[თრიალეთის კულტურა]]
 
 
 '''[[რკინის ხანა]]'''
