*Empty MediaWiki Message*

--- a/არქეოლოგია.mw
+++ b/არქეოლოგია.mw
@@ -19,11 +19,11 @@
 
 
 '''[[ნეოლითი|ნეოლითის]] და [[ენეოლითი|ენეოლითის]] ხანა'''
-:[[ჰასუნის კულტურა]] – [[ფაიუმის კულტურა]] – [[ელ-ობეიდის კულტურა]] – [[იანშაოს კულტურა]] – [[მაიკოპის კულტურა]] – [[ანასეულის კულტურა]]
+:[[ჰასუნის კულტურა]] – [[ფაიუმის კულტურა]] – [[ელ-ობეიდის კულტურა]] – [[იანშაოს კულტურა]] – [[მაიკოპის კულტურა]] – [[ანასეულის კულტურა]]– [[წოფის კულტურა]] – [[შულავერ-შომუთეფეს კულტურა]]
 
 
 '''[[ბრინჯაოს ხანა]]'''
-:[[კრეტა-მიკენის კულტურა]] – [[ყობანის კულტურა]] – [[მტკვარ-არაქსის კულტურა]] -[[თრიალეთის კულტურა]]
+:[[კრეტა-მიკენის კულტურა]] – [[ყობანის კულტურა]] – [[მტკვარ-არეზის კულტურა]] -[[თრიალეთის კულტურა]]
 
 
 '''[[რკინის ხანა]]'''
