/* წითელი ტყემლის მომზადების წესი */

--- a/ტყემლის_საწებელი.mw
+++ b/ტყემლის_საწებელი.mw
@@ -5,6 +5,6 @@
 საწებელა მდიდარია ნუტრიელემენტებით: ორგანული მჟავებით, შაქრებით, ჰიდროკარბონატებით, მიკრო და მაკრო ელემენტებით, პოლიფენოლებით, პექტინებითა და ვიტამინებით С, В1, В2, РР, Е.
 
 ==წითელი ტყემლის მომზადების წესი==
-წითელი და ყვითელი, კარგად  დამწიფებული ტყემალი  3/1 შეფარდებით, იხარშება ყვავილოვან [[ქინძი|ქინძთან]] ერთად. გაგრილების შემდეგ იწურება, ემატება გატარებული ხმელი [[უცხო სუნელი]] და ქინძი 2/1 შეფარდებით, მწარე [[წიწაკა]], [[ნიორი]], [[მარილა]] გემოვნებით და ისევ ადუღებენ 7-8 წთ. მზა ტყემალს ასხამენ სტერილურ, ჰერმეტულ მინის ჭურჭელში და გრილ ადგილას ინახავენ.
+წითელი და ყვითელი, კარგად  დამწიფებული ტყემალი  3/1 შეფარდებით, იხარშება ყვავილოვან [[ქინძი|ქინძთან]] ერთად. გაგრილების შემდეგ იწურება, ემატება გატარებული ხმელი [[უცხო სუნელი]] და ქინძი 2/1 შეფარდებით, მწარე [[წიწაკა]], [[ნიორი]], [[მარილი]] გემოვნებით და ისევ ადუღებენ 7-8 წთ. მზა ტყემალს ასხამენ სტერილურ, ჰერმეტულ მინის ჭურჭელში და გრილ ადგილას ინახავენ.
 
 [[კატეგორია:ქართული სამზარეულო]]
