*Empty MediaWiki Message*

--- a/არქეოლოგია.mw
+++ b/არქეოლოგია.mw
@@ -11,15 +11,15 @@
 
 
 '''[[პალეოლითი|პალეოლითის ხანა]]'''
-:[[აშელის კულტურა]] – [[შელის კულტურა]] – [[მუსტიეს კულტურა]]
+:[[აშელი|აშელის]] [[არქეოლოგიური კულტურა|კულტურა]] – [[შელი|შელის]] [[არქეოლოგიური კულტურა| კულტურა]] – [[მუსტიე|მუსტიეს]] [[არქეოლოგიური კულტურა|კულტურა]]
 
 
 '''[[მეზოლითი|მეზოლითის ხანა]]'''
-:[[ნატუფის კულტურა]] – [[აზილის კულტურა]]
+:[[ნატუფი|ნატუფის]] [[არქეოლოგიური კულტურა| კულტურა]] – აზილის  [[არქეოლოგიური კულტურა|კულტურა]]
 
 
 '''[[ნეოლითი|ნეოლითის]] და [[ენეოლითი|ენეოლითის]] ხანა'''
-:[[ჰასუნის კულტურა]] – [[ფაიუმის კულტურა]] – [[ელ-ობეიდის კულტურა]] – [[იანშაოს კულტურა]] – [[მაიკოპის კულტურა]] – [[ანასეულის კულტურა]]– [[წოფის კულტურა]] – [[შულავერ-შომუთეფეს კულტურა]]
+:[[ჰასუნა|ჰასუნის]]  [[არქეოლოგიური კულტურა| კულტურა]] – [[ფაიუმი|ფაიუმის]]  [[არქეოლოგიური კულტურა| კულტურა]] – [[ელ-ობეიდი|ელ-ობეიდის]]  [[არქეოლოგიური კულტურა|კულტურა]] – [[იანშო|იანშაოს]]  [[არქეოლოგიური კულტურა|კულტურა]] – [[მაიკოპი|მაიკოპის]] [[არქეოლოგიური კულტურა| კულტურა]] – [[ანასეული|ანასეულის]] [[არქეოლოგიური კულტურა| კულტურა]]– [[წოფის კულტურა]] – [[შულავერ-შომუთეფე|შულავერ-შომუთეფეს]] [[არქეოლოგიური კულტურა| კულტურა]]
 
 
 '''[[ბრინჯაოს ხანა]]'''
