--- a/მარნეულის_მუნიციპალიტეტი.mw
+++ b/მარნეულის_მუნიციპალიტეტი.mw
@@ -28,7 +28,7 @@
 
 
 ==ღირშესანიშნაობანი==
-ხუჯაბის სამონასტრო კომპლექსი, ოფრეთის ნაქალაქარი, [[წოფი|წოფის]] ეკლესია,  ხოჟორნის სამონასტრო კომპლექსი.
+ხუჯაბის სამონასტრო კომპლექსი, ოფრეთის ნაქალაქარი, წოფის ეკლესია,  ხოჟორნის სამონასტრო კომპლექსი.
 
 {{ქვემო ქართლი}}
 [[კატეგორია:საქართველოს რაიონები]]
