*Empty MediaWiki Message*

--- a/არქეოლოგია.mw
+++ b/არქეოლოგია.mw
@@ -15,11 +15,11 @@
 
 
 '''[[მეზოლითი|მეზოლითის ხანა]]'''
-:[[ნატუფი|ნატუფის]] [[არქეოლოგიური კულტურა| კულტურა]] – აზილის  [[არქეოლოგიური კულტურა|კულტურა]]
+:[[ნატუფი|ნატუფის]] [[არქეოლოგიური კულტურა| კულტურა]] – [[აზილი|აზილის]]  [[არქეოლოგიური კულტურა|კულტურა]]
 
 
 '''[[ნეოლითი|ნეოლითის]] და [[ენეოლითი|ენეოლითის]] ხანა'''
-:[[ჰასუნა|ჰასუნის]]  [[არქეოლოგიური კულტურა| კულტურა]] – [[ფაიუმი|ფაიუმის]]  [[არქეოლოგიური კულტურა| კულტურა]] – [[ელ-ობეიდი|ელ-ობეიდის]]  [[არქეოლოგიური კულტურა|კულტურა]] – [[იანშო|იანშაოს]]  [[არქეოლოგიური კულტურა|კულტურა]] – [[მაიკოპი|მაიკოპის]] [[არქეოლოგიური კულტურა| კულტურა]] – [[ანასეული|ანასეულის]] [[არქეოლოგიური კულტურა| კულტურა]]– [[წოფის კულტურა]] – [[შულავერ-შომუთეფე|შულავერ-შომუთეფეს]] [[არქეოლოგიური კულტურა| კულტურა]]
+:[[ჰასუნა|ჰასუნის]]  [[არქეოლოგიური კულტურა|კულტურა]] – [[ფაიუმი|ფაიუმის]] [[არქეოლოგიური კულტურა|კულტურა]] – [[ელ-ობეიდი|ელ-ობეიდის]] [[არქეოლოგიური კულტურა|კულტურა]] – [[იანშო|იანშაოს]] [[არქეოლოგიური კულტურა|კულტურა]] – [[მაიკოპი|მაიკოპის]] [[არქეოლოგიური კულტურა| კულტურა]] – [[ანასეული|ანასეულის]] [[არქეოლოგიური კულტურა| კულტურა]] – [[წოფი|წოფის]] [[არქეოლოგიური კულტურა|კულტურა]] – [[შულავერ-შომუთეფე|შულავერ-შომუთეფეს]] [[არქეოლოგიური კულტურა|კულტურა]]
 
 
 '''[[ბრინჯაოს ხანა]]'''
