*Empty MediaWiki Message*

--- a/ბრანდენბურგი.mw
+++ b/ბრანდენბურგი.mw
@@ -8,5 +8,6 @@
 [[lt:Brandeburgas (miestas)]]
 [[nds:Brannenborg an de Havel]]
 [[nl:Brandenburg an der Havel]]
+[[pl:Brandenburg]]
 [[pt:Brandenburg an der Havel]]
 [[ro:Brandenburg (oraş)]]
