*Empty MediaWiki Message*

--- a/ფერნანდო_მაგელანი.mw
+++ b/ფერნანდო_მაგელანი.mw
@@ -1,5 +1,5 @@
-[[სურათი:Ferdinand Magellan.jpg|thumb|ფერდინანდ მაგელანი]]
-'''ფერდინანდ მაგელანი''' (პორტ.: Fernão de Magalhães; ესპ.: Fernando ან Hernando de Magallanes; გაზაფხული [[1480]]–[[27 აპრილი]], [[1521]]) იყო [[პორტუგალიელები|პორტუგალიელი]] მეზღვაური-მკვლევარი, რომლის მეთაურობით მოხერხდა პირველი წარმატებული მოგზაურობა დედამიწის ირგვლივ. მაგელანს თავად მოგზაურობის დასრულებამ ვერ მოუწია; მოკლულ იქნა მაკტანის ბრძოლაში [[ფილიპინები|ფილიპინებზე]]. თუმცა ის გარდაიცვალა მალუკუს კუნძულების დასაველთით, და შესაბამისად ითველბა, რომ პირველი ადამიანი იყო, რომელმაც დედამიწის ყველა განედი გადაჭრა. [[ევროპა|ევროპიდან]] [[აზია|აზიაში]] დასავლეთის მიმართულებით მიმავალმა ექსპედიციამ მისი მეთაურობით პირველმა გადაჭრა [[წყნარი ოკეანე]].
+[[სურათი:Ferdinand Magellan.jpg|thumb|ფერნანდო მაგელანი]]
+'''ფერნანდო მაგელანი''' (პორტ.: Fernão de Magalhães; ესპ.: Fernando ან Hernando de Magallanes; გაზაფხული [[1480]]–[[27 აპრილი]], [[1521]]) იყო [[პორტუგალიელები|პორტუგალიელი]] მეზღვაური-მკვლევარი, რომლის მეთაურობით მოხერხდა პირველი წარმატებული მოგზაურობა დედამიწის ირგვლივ. მაგელანს თავად მოგზაურობის დასრულებამ ვერ მოუწია; მოკლულ იქნა მაკტანის ბრძოლაში [[ფილიპინები|ფილიპინებზე]]. თუმცა ის გარდაიცვალა მალუკუს კუნძულების დასაველთით, და შესაბამისად ითველბა, რომ პირველი ადამიანი იყო, რომელმაც დედამიწის ყველა განედი გადაჭრა. [[ევროპა|ევროპიდან]] [[აზია|აზიაში]] დასავლეთის მიმართულებით მიმავალმა ექსპედიციამ მისი მეთაურობით პირველმა გადაჭრა [[წყნარი ოკეანე]].
 
 ექსპედიციის 250 წევრიდან მხოლოდ 18-მა მოახერხა [[ესპანეთი|ესპანეთში]] დაბრუნება და შესაბამისად დედამიწის ირგვლივ შემოვლა. მათ მეთაურობდა [[ბასკები|ბასკი]] [[ელკანო, ხუან სებასტიან|ხუან სებასტიან ელკანო]], რომელმაც ექსპედიციის წინამძღოლობა მაგელანის სიკვდილის შემდეგ ითავა.
 
