--- a/ვალერი_გერგიევი.mw
+++ b/ვალერი_გერგიევი.mw
@@ -22,6 +22,7 @@
 [[eo:Valerij GERGIJEV]]
 [[nl:Valeri Gergiev]]
 [[ja:ヴァレリー・ゲルギエフ]]
+[[os:Гергиты Валери]]
 [[ru:Гергиев, Валерий Абисалович]]
 [[fi:Valeri Gergijev]]
 [[sv:Valerij Gergijev]]
