*Empty MediaWiki Message*

--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -14,7 +14,7 @@
 
 == იუდაიზმის განვითარების ტრადიციული შეხედულება ==
 [[სურათი:Duraeuropa.gif|thumb|250px|left|სცენა [[ესთერის წიგნი|ესთერის წიგნიდან]], [[დურა-ევროპოს სინაგოგა|დურა-ევროპოს სინაგოგის]] დეკორაცია]]
-ებრაული ბიბლიის თემაა ისრაელიტთა (იგივე ებრაელთა) ურთიერთობა ღმერთთან, როგორც ეს გამოიხატება მათ ისტორიაში დროის დასაბამიდან მეორე ტაძრის პერიოდამდე(დაახ. [[ძვ.წ. 350]] წლამდე). ეს ურთიერთობა აღწერილია როგორც უწყვეტი ისტორია, რომლის განმავლობაში ებრაელთა სულში ერთმანეთს ეჭიდება ღმერთის რწმენა და სხვა ღმერთებისადმი  მიზიდულება. ისეთი მნიშვნელოვანი ებრაელები, როგორც [[აბრამი (ბიბლია)|აბრამი]], [[იაკობი (ბიბლია)|იაკობი]] და [[მოსე (ბიბლია)|მოსე]], ღმერთსაც შეეჭიდნენ თორაში (აბრამი და იაკობი ღმერთს ზოგჯერ გაბედულად შეეპასუხნენ, ხოლო იაკობი სიზმარში ღმერთს ფიზიკურად შეებრძოლა).
+ებრაული ბიბლიის თემაა ისრაელიტთა (იგივე ებრაელთა) ურთიერთობა ღმერთთან, როგორც ეს გამოიხატება მათ ისტორიაში დროის დასაბამიდან მეორე ტაძრის პერიოდამდე (დაახ. [[ჩვ.წელთაღრიცხვამდე 350]] წლამდე). ეს ურთიერთობა აღწერილია როგორც უწყვეტი ისტორია, რომლის განმავლობაში ებრაელთა სულში ერთმანეთს ეჭიდება ღმერთის რწმენა და სხვა ღმერთებისადმი  მიზიდულება. ისეთი მნიშვნელოვანი ებრაელები, როგორც [[აბრამი (ბიბლია)|აბრამი]], [[იაკობი (ბიბლია)|იაკობი]] და [[მოსე (ბიბლია)|მოსე]], ღმერთსაც შეეჭიდნენ თორაში (აბრამი და იაკობი ღმერთს ზოგჯერ გაბედულად შეეპასუხნენ, ხოლო იაკობი სიზმარში ღმერთს ფიზიკურად შეებრძოლა).
 
 მართლმადიდებლური იუდაიზმისა და მორწნუნე ებრაელთა აზრის მიხედვით ბიბლიური პატრიარქი აბრამი პირველი ებრაელი იყო. რაბინული ლიტერატურის მიხედვით მან კაცობრიობაში პირველმა უარყო [[კერპთაყვანისმცემლობა]] და მონოთეიზმი იქადაგა. შედეგად, მას ღმერთმა ურიცხვი შვილი აღუთქვა ([[დაბადება 15:5]]). აბრამის პირველი შვილი [[იშმაელი აბრამის ძე|იშმაელი]] იყო, ხოლო მეორე ვაჟი - [[ისაკი აბრამის ძე|ისაკი]]. ისაკის შეძენისას ღმერთმა თქვა, რომ ის გააგრძელებდა აბრამის სულიერ შრომას, ხოლო მისი შთამომავლობა [[ეგვიპტე|ეგვიპტეში]] გადახვეწისა და იქედან გამოხსნის შემდეგ ისრაელის მიწას დაისაკუთრებდა. ღმერთმა ისაკის ძე იაკობი და მისი შვილები გვალვით აიძულა [[ქანაანი|ქანაანიდან]] ეგვიპტეში გადასულიყვნენ, სადაც მრავალი თაობის შემდეგ ებრაელები დაიმონეს. მონობისაგან გამოსახსნელად ღმერთმა ებრაელებს მოსე მოუვლინა, ეგვიპტიდან ისინი თვითონ გამოიყვანა, [[სინის მთა|სინაის მთაზე]] მათ თორა მისცა და საბოლოოდ აღთქმულ მიწაზე მიიყვანა. მთასთან ღმერთმა მოსეს ძმის - არონის შთამომავლობა ქოჰენების (ქურუმების) კლასად დაამტკიცა. ისინი საბოლოოდ [[იერუსალიმის ტაძარი|იერუსალიმის ტაძარში]] მსახურებდნენ.
 
@@ -36,18 +36,18 @@
 
 ბიბლიისადმი მართლმადიდებლური იუდაიზმის მიდგომისაგან განსხვავებით, ბიბლიის კრიტიკულად მკვლევართა აზრით თორა მრავალი ურთიერთშეუფერებელი ტექსტისგან შესდგება, რომელთა გვიანი რედაქტირება ერთი და იგივე მონათხრობების სხვადასხვანაირი გადმოცემით იპყრობს ყურადღებას (ე.წ. დოკუმენტური ჰიპოთეზა).
 
-== რელიგიური დოქტრინა და ''რწმენის პრინციპები'' ==
+== რელიგიური დოქტრინა და ''სარწმუნოების პრინციპები'' ==
 
-თუმცა იუდაიზმი ყოველთვის იცავდა რწმენის რამოდენიმე პრინციპს, მას მაინც არ აქვს ყველა ებრაელისადმი აუცილებლად მისაღები დოგმა. ეს თვისება, რომელიც იუდაიზმს უკვე 2000 წელი ახასიათებს, აძნელებს ყოველგვარ განზოგადოებას ებრაული თეოლოგიის მიმართ. მიუხედავად იმისა, რომ ზოგჯერ ცალკეულმა რაბინებმა ან ებრაულმა მიმდინარეობებმა მიაღწიეს თანხმობას - მიეღოთ მტკიცე დოგმა, მათ თითქმის არასოდეს არ დაეთახმნენ სხვა რაბინები და ჯგუფები. რადგან იუდაიზმს არავითარი ცენტრალური ავტორიტეტი არ გააჩნია, ებრაული რწმენის პრინციპთა არცერთ ფორმულას არ ძალუძს სხვა ფორმულა დასძლიოს. როდესაც ანტიკური ხანის ისტორიკოსი, [[იოსეფუსი]], ეცადა დაედგინა, თუ ვინ არის ებრაელი, მან ღვთისმსახურების წესებსა და ტრადიციებს გაუსვა ხაზი და არა რწმენის პრინციპებს. მისი აზრით, ებრაელის გადარჯულება ტრადიციულ ჩვეულებათა შეუსრულებლობაში გამოიხატება, ხოლო ებრაელად მორჯულება [[წინადაცვეთა|წინადაცვეთასა]] და ამ ჩვეულებათა მიღებას საჭიროებს.
+თუმცა იუდაიზმი ყოველთვის იცავდა სარწმუნოების რამოდენიმე პრინციპს, მას მაინც არ აქვს ყველა ებრაელისადმი აუცილებლად მისაღები დოგმა. ეს თვისება, რომელიც იუდაიზმს უკვე 2000 წელი ახასიათებს, აძნელებს ყოველგვარ განზოგადოებას ებრაული თეოლოგიის მიმართ. მიუხედავად იმისა, რომ ზოგჯერ ცალკეულმა რაბინებმა ან ებრაულმა მიმდინარეობებმა მიაღწიეს თანხმობას - მიეღოთ მტკიცე დოგმა, მათ თითქმის არასოდეს არ დაეთახმნენ სხვა რაბინები და ჯგუფები. რადგან იუდაიზმს არავითარი ცენტრალური ავტორიტეტი არ გააჩნია, ებრაული სარწმუნოების პრინციპთა არცერთ ფორმულას არ ძალუძს სხვა ფორმულა დასძლიოს. როდესაც ანტიკური ხანის ისტორიკოსი, [[იოსეფუსი]], ეცადა დაედგინა, თუ ვინ არის ებრაელი, მან ღვთისმსახურების წესებსა და ტრადიციებს გაუსვა ხაზი და არა სარწმუნოების პრინციპებს. მისი აზრით, ებრაელის გადარჯულება ტრადიციულ ჩვეულებათა შეუსრულებლობაში გამოიხატება, ხოლო ებრაელად მორჯულება [[წინადაცვეთა|წინადაცვეთასა]] და ამ ჩვეულებათა მიღებას საჭიროებს.
 
-მართლმადიდებლური იუდაიზმის მიხედვით, რწმენის პრინციპთა შორის სამი ისეთი მნიშვნელოვანია, რომ ებრაელის მიერ მათი უარყოფა თემიდან მის მოღკვეთას ([[ექს-კომუნიკაცია|ექს-კომუნიკაციას]]) იმსახურებს, თანაც მესიის მოსვლისას ის მკვდრეთით ვერ აღდგება; ეს სამი პრინციპია: 
+მართლმადიდებლური იუდაიზმის მიხედვით, სარწმუნოების პრინციპთა შორის სამი ისეთი მნიშვნელოვანია, რომ ებრაელის მიერ მათი უარყოფა თემიდან მის მოღკვეთას ([[ექს-კომუნიკაცია|ექს-კომუნიკაციას]]) იმსახურებს, თანაც მესიის მოსვლისას ის მკვდრეთით ვერ აღდგება; ეს სამი პრინციპია: 
 *ღმერთის არსებობა, 
 *თორის ღმერთისგან მიღება და 
 *ღვთიური მსჯავრის არსებობა. 
 
 ამ პრინციპთა უარმყოფელი ებრაელი ''აფიკოროსად'' (ურწმუნოდ) ითვლება.
 
-საუკუნეთა განმავლობაში, ებრაული რწმენის პრინციპთა რამოდენიმე ნათელი ფორმულა დადგინდა. მათ საერთო ელემენტები აკავშირებს და დეტალები ანსხვავებს, რითაც სხვადასხვა თეოლოგიური შეხედულებებისადმი შემწყნარებლობა მჟღავნდება. ამათგან, ყველაზე ფართოდ აღიარებული ავტორიტეტით რაბინი [[მაიმონი, მოშე ბენ|მოშე ბენ მაიმონის]] რწმენის ცამეტი პრინციპი სარგებლობს: 
+საუკუნეთა განმავლობაში, ებრაული სარწმუნოების პრინციპთა რამოდენიმე ნათელი ფორმულა დადგინდა. მათ საერთო ელემენტები აკავშირებს და დეტალები ანსხვავებს, რითაც სხვადასხვა თეოლოგიური შეხედულებებისადმი შემწყნარებლობა მჟღავნდება. ამათგან, ყველაზე ფართოდ აღიარებული ავტორიტეტით რაბინი [[მაიმონი, მოშე ბენ|მოშე ბენ მაიმონის]] სარწმუნოების ცამეტი პრინციპი სარგებლობს: 
 
 *''ღმერთი არსებობს და განაგებს.'' 
 *'' ის ერთია;'' მონოთეიზმის მტკიცე უნიტარული პრინციპი, რომელსაც ემყარება შეხედულება, რომ მარადიული ღმერთი [[მორალი|მორალის]] საწყისია. 
@@ -99,7 +99,7 @@
    
 *[[ხასიდური იუდაიზმი]] ხარედული იუდაიზმის ერთ-ერთი მნიშვნელოვანი  ჯგუფია. 
 
-2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციული) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომლებიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
+2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციული) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
 
 კონსერვატიული იუდაიზმის მიხედვით ებრაული კანონი უცვლელი არ ყოფილა - იგი ყოველთვის ცვალებად პირობებთან შეგუებით ვითარდებოდა; კონსერვატორი ებრაელების აზრით [[თორა]] ღმერთისაგან შთაგონებულ წინასწარმეტყველთა მიერ დაწერილი საღვთო საბუთია, მაგრამ ისინი უარყოფენ მართლმადიდებლურ შეხედულებას, რომ თორა ღმერთმა მოსეს უკარნახა. კონსერვატიული იუდაიზმი ზეპირ თორასაც საღვთოდ და დამავალებელად მიიჩნევს, მაგრამ უარყოფს მისი კანონების ზოგ მართლმადიდებლურ ინტერპრეტაციას.     
         
