*Empty MediaWiki Message*

--- a/ჟან_ანტუან_ჰუდონი.mw
+++ b/ჟან_ანტუან_ჰუდონი.mw
@@ -4,6 +4,8 @@
 [[კატეგორია:დაბადებული  1741]]
 [[კატეგორია:გარდაცვლილი  1828]]
 
-[[de:Jean-Antoine Houdon]]
 [[en:Jean Antoine Houdon]]
+[[es:Jean-Antoine Houdon]]
 [[fr:Jean-Antoine Houdon]]
+[[pt:Jean Antoine Houdon]]
+[[sv:Jean-Antoine Houdon]]
