*Empty MediaWiki Message*

--- a/ჟან_ანტუან_ჰუდონი.mw
+++ b/ჟან_ანტუან_ჰუდონი.mw
@@ -7,5 +7,6 @@
 [[en:Jean Antoine Houdon]]
 [[es:Jean-Antoine Houdon]]
 [[fr:Jean-Antoine Houdon]]
+[[de:Jean-Antoine Houdon]]
 [[pt:Jean Antoine Houdon]]
 [[sv:Jean-Antoine Houdon]]
