--- a/ცნობილი_ქართველები:_ჩ.mw
+++ b/ცნობილი_ქართველები:_ჩ.mw
@@ -116,6 +116,7 @@
 * [[ჩუბინიშვილი, გიორგი]] - ინჟინერ-ჰიდროტექნიკოსი
 * [[ჩუბინიშვილი, გიორგი ილიას ძე]] - კომპოზიტორი
 * [[ჩუბინიშვილი, ოთარ]] - ვიოლონჩელისტი და პედაგოგი
+* [[ჩუბინიშვილი, ტარიელ]] - არქეოლოგი
 * [[ჩუბინიძე, თომა]] - რევოლუციური მოძრაობის მონაწილე საქართველოში
 * [[ჩუბინიძე, ლევან]] - საბჭოთა კავშირის გმირი
 * [[ჩუბინიძე, მიხეილ]] - მსახიობი
