--- a/იუდაიზმი.mw
+++ b/იუდაიზმი.mw
@@ -99,9 +99,13 @@
    
 *[[ხასიდური იუდაიზმი]] ხარედული იუდაიზმის ერთ-ერთი მნიშვნელოვანი  ჯგუფია. 
 
-2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციული) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
+2) [[კონსერვატიული იუდაიზმი]], რომელიც აშშ-ს გარეთ მასორეთული (ტრადიციონალისტური) იუდაიზმის სახელითაა ცნობილი, მე-19 საუკუნიდან განვითარდა ევროპასა და შეერთებულ შტატებში; იგი გამოძახილი იყო იმ ცვლილებებისა, რომელიც განათლებამ და ებრაელთა უფლებრივად გათანასწორებამ გამოიწვია. ამ მიმდინარეობისათვის დამახასიათებელი იყო უცვლელი მორჩილება ტრადიციული ჩვეულებებისადმი და კანონებისადმი (შაბათისა და ქაშრუთის დაცვის ჩათვლით), ებრაულ რწმენის პრინციპთა განგებ არაფუნდამენტალისტური სწავლება, თანამედროვე კულტურისადმი დადებითი დამოკიდებულება, ტრადიციული რაბინული სწავლულობის აღიარება თანამედროვე განათლებასთან ერთად და ებრაულ რელიგიურ ტექსტთა კრიტიკულად შესწავლა.
 
-კონსერვატიული იუდაიზმის მიხედვით ებრაული კანონი უცვლელი არ ყოფილა - იგი ყოველთვის ცვალებად პირობებთან შეგუებით ვითარდებოდა; კონსერვატორი ებრაელების აზრით [[თორა]] ღმერთისაგან შთაგონებულ წინასწარმეტყველთა მიერ დაწერილი საღვთო საბუთია, მაგრამ ისინი უარყოფენ მართლმადიდებლურ შეხედულებას, რომ თორა ღმერთმა მოსეს უკარნახა. კონსერვატიული იუდაიზმი ზეპირ თორასაც საღვთოდ და დამავალებელად მიიჩნევს, მაგრამ უარყოფს მისი კანონების ზოგ მართლმადიდებლურ ინტერპრეტაციას.     
+კონსერვატიული იუდაიზმის მიხედვით ებრაული კანონი უცვლელი არ ყოფილა - იგი ყოველთვის ცვალებად პირობებთან შეგუებით ვითარდებოდა; კონსერვატორი ებრაელების აზრით [[თორა]] ღმერთისაგან შთაგონებულ წინასწარმეტყველთა მიერ დაწერილი საღვთო საბუთია, მაგრამ ისინი უარყოფენ მართლმადიდებლურ შეხედულებას, რომ თორა ღმერთმა მოსეს უკარნახა. კონსერვატიული იუდაიზმი ზეპირ თორასაც საღვთოდ და დამავალებელად მიიჩნევს, მაგრამ უარყოფს მისი კანონების ზოგ მართლმადიდებლურ ინტერპრეტაციას.
+
+3) [[პროგრესიული იუდაიზმი]] მრავალი მოძრაობებისგან შესდგება, რომლებსაც რამოდენიმე ქვეყანაში აქვთ ფეხი მოკიდებული.
+
+* [[რეფორმისტული იუდაიზმი]], რომელსაც ზოგ ქვეყანაში ლიბერალურს ან პროგრესიულსაც უწოდებენ, მე-19 საუკუნის გერმანიაში წარმოიშვა განათლების მოძრაობის გავლენით. სხვა მიმდინარეობებისაგან მისი განმასხვავებელი თვისებაა უარყოფა იმისა, რომ ებრაული კანონების შესრულება აუცილებელი რელიგიური ვალდებულებაა. რეფორმისტების აზრით, იუდაიზმის საკითხებში გაცნობიერებული თითოეული ებრაელი უნდა სარგებლობდეს ავტონომიით, რომლის ფარგლებშიც თვითონ გადაწყვიტავს, თუ სად მიაჩნია თორის ტექსტი დამაჯერებლად და რომელი კანონები შეასრულოს. რეფორმისტები ებრაული ტრადიციის ინდივიდუალურად შეთვისებას მოითხოვენ, და არა დადგენილი წესებით ღვთისმსახურებას. საბოლოოდ, რეფორმისტებმა ებრაელობა დასახეს მხოლოდ რელიგიად, და არა ეროვნებად ან კულტურად. რეფორმისტებმა აგრეთვე უარყვეს თორით ნაკარნახევი რიტუალური წესები და ყოფაცხოვრების შემბოჭავი, - თორისავე ბევრი მკრძალავი კანონი; სამაგიეროდ, რეფორმისტებმა ხაზი გაუსვეს წინასწარმეტყველთა მოწოდებას ზნეობრივი სისპეტაკისაკენ. რეფორმისტულმა იუდაიზმმა თავისი ლოცვანიც გამოიმუშავა დიასპორის ქვეყნების ენებზე. ბოლო დროს, ბევრმა რეფორმისტულმა თემმა აღადგინა ებრაულ ენაზე ლოცვის ტრადიცია და ბევრი მათგანი მორწმუნეებს მოუწოდებს რამდენადმე დაიცვან ებრაული კანონები. (დიდ ბრიტანეთში, რეფორმისტული მიმდინარეობა ამჟამად ორ რელიგიურ თემადაა გაყოფილი: რეფორმისტულად და ლიბერალურად. რეფორმისტული თემი ლიბერალურზე ბევრად უფრო ტრადიციონალისტურია, ოღონდ თეოლოგიური შეხედულებებით ისინი არ განსხვავდებიან ერთმანეთისგან).       
         
  
          
