--- a/მიხეილ_ხერგიანი.mw
+++ b/მიხეილ_ხერგიანი.mw
@@ -1,7 +1,13 @@
-'''მიხეილ ბესარიონის ძე ხერგიანი''' (* [[25 მარტი]], [[1932]], დაბა [[მესტია]] ―        † დაიღუპა [[4 ივლისი]], [[1969]], მწვერვალი [[სუ-ალტო]] (დოლომიტები), [[იტალია]], დაკრძალულია [[მესტია|მესტიაშ]]ი), საბჭოთა ეპოქის [[ქართველები|ქართველი]] ალპინისტი, სსრკ სპორტის დამსახურებული ოსტატი ([[1963]]), სსრკ საერთაშორისო კლასის სპორტის ოსტატი ([[1967]]).
+'''მიხეილ ბესარიონის ძე ხერგიანი''' (* [[25 მარტი]], [[1932]], დაბა [[მესტია]] ―        † დაიღუპა [[4 ივლისი]], [[1969]], მწვერვალი [[სუ-ალტო]] (დოლომიტები), [[იტალია]], დაკრძალულია [[მესტია|მესტიაში]]), საბჭოთა ეპოქის [[ქართველები|ქართველი]] ალპინისტი, სსრკ სპორტის დამსახურებული ოსტატი ([[1963]]), სსრკ საერთაშორისო კლასის სპორტის ოსტატი ([[1967]]).
 
 
 [[1969]] წელს დაამთავრა საქართველოს ფიზკულტურის ინსტიტუტი. [[ალპინიზმი|ალპინიზმში]] [[სსრკ]] სამგზის ([[1955]], [[1956]], [[1964]]) და კლდეზე ცოცვაში პროფკავშირების საკავშირო შეჯიბრებისა და სსრკ ჩემპიონატების შვიდგზის ([[1952]], [[1960]], [[1962]], [[1964]], [[1965]] (აბსოლუტური), [[1966]], [[1967]]) ჩემპიონი. გამოირჩეოდა [[მთა|მთაზე]] ასვლისა და [[კლდე|კლდეზე]] ცოცვის უბადლო ოსტატობით.  ძალზე პოპულარული იყო როგორც საბჭოთა, ისე უცხოეთის მთასვლელთა შორის. 
+
+'''მიხეილ ხერგიანის სახლ-მუზეუმი მესტიაში'''
+<gallery>
+სურათი:Geo95-172-2400.jpg|
+სურათი:Geo95-173-2400.jpg|
+</gallery>
 
 ხერგიანის მთაში სამაშველო მუშაობის შედეგად გადარჩენილია მრავალი ადამიანი. მისი სახელის უკვდავსაყოფად [[1983]] წელს მესტიაში გაიხსნა ხერგიანის მემორიალური მუზეუმი. [[1976]] წლიდან [[გაგრა|გაგრის]] მახლობლად ყოველწლიურად ტარდებოდა ხერგიანის მემორიალი (შეჯიბრება კლდეზე ცოცვაში). [[1969]] [[თურქესტანი|თურქესტანის]] ქედზე 4960 მ სიმაღლის მწერვალს მისი სახელი ეწოდა. [[1971]] წელს კლდეზე ცოცვაში საკავშირო შეჯიბრებაზე დაწესდა ხერგიანის პრიზი. ხერგიანი დაჯილდოებულია [[საპატიო ნიშანი|"საპატიო ნიშნის" ორდენით]].
 
