*Empty MediaWiki Message*

--- a/მიხეილ_ხერგიანი.mw
+++ b/მიხეილ_ხერგიანი.mw
@@ -3,9 +3,9 @@
 
 [[1969]] წელს დაამთავრა საქართველოს ფიზკულტურის ინსტიტუტი. [[ალპინიზმი|ალპინიზმში]] [[სსრკ]] სამგზის ([[1955]], [[1956]], [[1964]]) და კლდეზე ცოცვაში პროფკავშირების საკავშირო შეჯიბრებისა და სსრკ ჩემპიონატების შვიდგზის ([[1952]], [[1960]], [[1962]], [[1964]], [[1965]] (აბსოლუტური), [[1966]], [[1967]]) ჩემპიონი. გამოირჩეოდა [[მთა|მთაზე]] ასვლისა და [[კლდე|კლდეზე]] ცოცვის უბადლო ოსტატობით.  ძალზე პოპულარული იყო როგორც საბჭოთა, ისე უცხოეთის მთასვლელთა შორის. 
 
-'''მიხეილ ხერგიანის სახლ-მუზეუმი მესტიაში'''
+
 <gallery>
-სურათი:Geo95-172-2400.jpg|
+სურათი:Geo95-172-2400.jpg|''მიხეილ ხერგიანის სახლ-მუზეუმი მესტიაში''
 სურათი:Geo95-173-2400.jpg|
 </gallery>
 
