ბმულები და სურათი

--- a/ნიკო_მარი.mw
+++ b/ნიკო_მარი.mw
@@ -1,3 +1,4 @@
+[[სურათი:Nikolai_Marr_1905.jpg|thumb|ნიკო მარი]]
 '''ნიკოლოზ (ნიკო) იაკობის ძე მარი''' (* [[ 25 დეკემბერი]], [[1864]],  [[6 იანვარი]], [[1865]], [[ ქუთაისი]] ―   † [[20 დეკემბერი]], [[1934]], [[ლენინგრადი]] ახლანდელი [[სანქტ-პეტერბურგი]]), საბჭოთა ეპოქის ენათმეცნიერი, ფილოლოგი, ორიენტალისტი, არქეოლოგი, კულტურის ისტორიკოსი. რუსეთის მეცნიერებათა აკადემიის ნამდვილი წევრი (1912).
 
 მამა [[შოტლანდიელები|შოტლანდიელი]] ჰყავდა, დედა - [[ქართველები|ქართველი]]. [[1884]] წელს დაამთავრა ქუთაისის კლასიკური გიმნაზია, [[1890]] - პეტერბურგის უნივერსიტეტის აღმოსავლურ ენათა ფაკულტეტი. [[1891]]-იდან ამავე უნივერსიტეტის პრივატ-დოცენტი იყო. [[1894]]-[[1896]] წლებში მუშაობდა [[სტრასბურგი|სტრასბურგის]] უნივერსიტეტის, [[ვატიკანი|ვატიკანისა]] და [[რომი|რომის]] [[ბიბლიოთეკა|ბიბლიოთეკებში]]. 
@@ -25,3 +26,7 @@
 [[კატეგორია:ქართველი მეცნიერები]]
 [[კატეგორია:დაბადებული  1865]]
 [[კატეგორია:გარდაცვლილი  1934]]
+
+[[de:Nikolai Jakowlewitsch Marr]]
+[[en:Nikolay Yakovlevich Marr]]
+[[ru:Марр, Николай Яковлевич]]
