new text is pure raw material

--- a/მცხეთის_ჯვრის_მონასტერი.mw
+++ b/მცხეთის_ჯვრის_მონასტერი.mw
@@ -1,6 +1,8 @@
 [[სურათი:Jvari.jpg|thumb|250px|ჯვარი]]
 :<small>ამ სახელწოდების სხვა მნიშვნელობისთვის იხილეთ: [[ჯვარი]].</small>
 
+{{სტილი}}
+
 '''ჯვარი''' ან '''ჯვრის მონასტერი''' მე-6 საუკუნის ქართული ქრისტიანული მონასტერი. დგას მთაზე, ძველი დედაქალაქის -  [[მცხეთა|მცხეთის]]პირდაპირ, იქ სადაც არაგვი ერთვის მტკვარს. [[მცხეთა-მთიანეთის მხარე]], [[ქართლი]]. შეტანილია მსოფლიო კულტურული მემკვიდრეობის ძეგლთა სიაში. 
 
 ტაძრის სახელწოდებას ისტორიული საფუძველი აქვს. ქტისტიანობის მიღების პირველი წლებიდანვე ამ ადგილას მეფე [[მირიან III|მირიან III-მ]] ხის მაღალი ჯვარი აღმართა, რომელსაც გარდა ქართველებისა ტაყვანს სცემდნენ კავკასიია სხვა ქრიატიანი ერებიც. VI საუკუნის II ნახევარში ამ ჯვრის არსებობას ადასტურებს "ევსტათი მცხეთელის ცხოვრებას". VII საუკუნის II ნახევარში (545-სა და 586 შორის) ქართლის ერისმთავარმა [[გუარამი|გუარამმა]] ჯვრის გვერდით პატარა ეკლესია ააშენა (დგას საგანგებო სუბსტრუქციაზე, რომელშიც სამარხია). გარედან იგი ორფერდასახურავიანი მარტივი სწორკუთხა ნაგებობაა, შიგნით ჯვრისებრი მოხაზულობა აქვს (1 აფსიდითა და 3 სწორკუთხა მკლავით). შუაში კვადრატია, რომელსაც გუმბათისებრი გადახურვა ჰქონია (მხოლოდ ყელის გარეშე). ამ პატარა სამლოცველოს დღეს ჯვრის მცირე ტაძარს ანუ "მცირე ჯვარს" უწოდებენ. იმავე VI საუკუნის მიწურულსა და VII საუკუნის დასაწყისში (586/587-604/605) გუარამის ძემ - ერისმთავარმა [[სტეფანოზ I|სტეფანოზ I-მა]] მცირე ტაძრის გვერდით ააგო დიდი ტაძარი, რომელსაც ზედ გადაეხურა ხის ჯვარს (ჯვრის კვარცხლბეკი დღემდეა დარჩენილი ეკლესიაში). ჯვრის მცირე და დიდი ტაძრების აგების დროს თვით ძეგლთა ანალიზის საფუძველზე დაადგინა გ. ჩუბინაშვილმა. საუკუნეთა მანძილზე მცირე ტაძარი ძლიერ დაზიანდა, დიდმა ტაძარმა კი კარგად მოაღწია დღემდე.
