*Empty MediaWiki Message*

--- a/კიშინიოვი.mw
+++ b/კიშინიოვი.mw
@@ -32,11 +32,11 @@
 |-
 ! colspan="2" align="center" | 
 |- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[Bild:Satellit_Chisinau_01.jpg|Satelliten-Aufnahme Chişinău|300px|კიშინიოვის სატელიტური ფოტო]]
+| align="center" colspan=2 | [[სურათი:Satellit_Chisinau_01.jpg|300px|კიშინიოვის სატელიტური ფოტო]]
 |- bgcolor="#FFFFFF"
 ! colspan="2" align="center" | კიშინიოვის სატელიტური ფოტო
 |- bgcolor="#FFFFFF"
-| align="center" colspan=2 | [[Bild:Statistik KIV Population 01 01.png|Grafik: Bevölkerungsentwicklung|300px|გრაფიკი: მოსახლეობის ზრდა]]
+| align="center" colspan=2 | [[სურათი:Statistik KIV Population 01 01.png|300px|გრაფიკი: მოსახლეობის ზრდა]]
 |- bgcolor="#FFFFFF"
 ! colspan="2" align="center" | გრაფიკი: მოსახლეობის ზრდა
 |}
