*Empty MediaWiki Message*

--- a/ბუქარესტი.mw
+++ b/ბუქარესტი.mw
@@ -2,13 +2,13 @@
 |-
 | align="center" colspan=2 | <font size="+1">'''Municipiul Bucureşti'''</font>
 |-
-| align="center" colspan=2 | <font size="+1">'''ბუქარესტის მუნიციპალიტეტი'''</font>
+| align="center" colspan=2 | <font size="+1">'''ბუქარესტის მუნიციპ.'''</font>
 |-
 | align="center" colspan=2 | [[Image:Bancorex building bgiu.jpg|center|220px|ბუქარესტის ცენტრი]]
 |- 
 | align="center" colspan=2 | [[Image:Bucuresti-localization.png|ბუქარესტის მდებარეობა რუმინეთში]]
 |- 
-| '''[[ფართობი]]'''<br/>&nbsp;• ქალაქის ფარგლები<br />&nbsp;• აგლომერაცია<br/>
+| '''[[ფართობი]]'''<br/>&nbsp;• ქალაქი<br />&nbsp;• აგლომერაცია<br/>
 | <br/>228 [[კმ²]]<br/>1,521 [[კვ²]]
 |- 
 | '''[[ეკონომიკა]]'''<br/>&nbsp;• [[ეშპ]] [[პერ კაპიტა]] (2005)<br/>&nbsp;• ბიუჯეტი (2005)
@@ -20,18 +20,18 @@
 | '''[[ბუქარესტის მერი|მერი]]'''
 | [[ვიდანუ, ადრიენ|ადრიენ ვიდეანუ]] 
 |- 
-| '''[[დროის სარტყელი]]'''
-| [[UTC]]+2
+| '''[[დროის სარტყელი|დრო]]'''
+| [[GMT]]+2
 |- 
 | '''[[გეოგრაფიული კოორდინატები|კოორდ.]]'''
 | 
-{{coor dm|44|25|N|26|06|E|}}
+|44°25′N 26°06′E
 |}
 
 
-'''ბუქარესტი''' (რუმინ.: Bucureşti /bu.ku'reʃtʲ/) რუმინეთის დედაქალაქი და ქვეყნის ინდუსტრიული და კომერციული ცენტრია. მდებარეობას ქვეყნის სამხრეთ-აღმოსავლეთით, 44°25′N 26°06′E-ზე, მდინარე დამბოვიცას სანაპიროზე.
+'''ბუქარესტი''' (რუმინ.: Bucureşti /bu.ku'reʃtʲ/) [[რუმინეთი|რუმინეთის]] [[დედაქალაქი]] და ქვეყნის ინდუსტრიული და კომერციული ცენტრია. მდებარეობას ქვეყნის სამხრეთ-აღმოსავლეთით, 44°25′N 26°06′E-ზე, მდინარე დამბოვიცას სანაპიროზე.
 
-ქალაქი პირველად დანხსენებია 1459 წელს და რუმინეთის დედაქალაქი 1862 წელს გახდა. მას შემდეგ მან მრავალი ცვლილება განიცადა და რუმინეთის მასმედიის, კულტურისა და ხელოვნების ცენტრი ხდება. მისი ეკლექტური არქიტექტურა - ნაზავი ისტორიული, კომუნისტური და თანამედროვე არქიტექტურის - ნათლად ასახავს ქალაქზე ისტორიული მოვლენების გავლენას. ორ მსოფლიო ომს შორის პერიოდში ქალაქი აღმოსავლეთ ევროპის კულტურული მოვლენების ცენტრი იყო და ამგვარად მისი ელეგანტური არქიტექტურისა და გემოვნებიანი ელიტის გამო მას აღმოსავლეთის პარიზი, ან მცირე პარიზი შეარქვეს. ომმა, მიწისძვრებმა და ნიკოლაუ ჩაუშესკუს სისტემატიზაციის პროგრამამ ქალაქს იერი საკმაოდ შეუცვალა, თუმცა ბევრი რამ მაინც გადარჩა და ბოლო წლებში ქალაქი ისევ განიცდის ეკონომიკურ და კულტურულ ბუმს.
+ქალაქი პირველად ნახსენებია 1459 წელს და რუმინეთის დედაქალაქი 1862 წელს გახდა. მას შემდეგ მან მრავალი ცვლილება განიცადა და რუმინეთის მასმედიის, კულტურისა და ხელოვნების ცენტრი ხდება. მისი ეკლექტური არქიტექტურა - ნაზავი ისტორიული, კომუნისტური და თანამედროვე არქიტექტურის - ნათლად ასახავს ქალაქზე ისტორიული მოვლენების გავლენას. ორ მსოფლიო ომს შორის პერიოდში ქალაქი აღმოსავლეთ ევროპის კულტურული მოვლენების ცენტრი იყო და ამგვარად მისი ელეგანტური არქიტექტურისა და გემოვნებიანი ელიტის გამო მას აღმოსავლეთის პარიზი, ან მცირე პარიზი შეარქვეს. ომმა, მიწისძვრებმა და ნიკოლაუ ჩაუშესკუს სისტემატიზაციის პროგრამამ ქალაქს იერი საკმაოდ შეუცვალა, თუმცა ბევრი რამ მაინც გადარჩა და ბოლო წლებში ქალაქი ისევ განიცდის ეკონომიკურ და კულტურულ ბუმს.
 
 2002 წლის ცენზის მიხედვით ბუქარესტის მოსახლეობა იყო 1.921.751 სული ქალაქის ფარგლებში. აგლომერაციაში დაახ. 2,3 მილიონი ადამიანი სახლობს. ეკონომიკურად ბუქარესტი რუმინეთის ყველაზე მდიდარი ქალაქია და ასევე მნიშვნელოვანი ინდუსტრიული და საკომუნიკაციო ცენტრია.
 
